move migration code to docker
