# swagger/swagger.json
@@ -122,32 +122,6 @@
                 }
             }
         },
-        "/pds/": {
-            "post": {
-                "tags": [
-                    "pds"
-                ],
-                "description": "create pds",
-                "operationId": "PdController.CreatePd",
-                "parameters": [
-                    {
-                        "in": "body",
-                        "name": "body",
-                        "description": "body for pd content",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.Pd"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {},
-                    "403": {
-                        "description": "body is empty"
-                    }
-                }
-            }
-        },
         "/pds/replicas": {
             "get": {
                 "tags": [
@@ -207,30 +181,6 @@
                     },
                     "404": {
                         "description": ":key not found"
-                    }
-                }
-            },
-            "delete": {
-                "tags": [
-                    "pds"
-                ],
-                "description": "delete the pd service",
-                "operationId": "PdController.Delete",
-                "parameters": [
-                    {
-                        "in": "path",
-                        "name": "cell",
-                        "description": "The cell you want to delete",
-                        "required": true,
-                        "type": "string"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "{string} delete success!"
-                    },
-                    "403": {
-                        "description": "cell is empty"
                     }
                 }
             }
@@ -467,32 +417,6 @@
                 }
             }
         },
-        "/tikvs/": {
-            "post": {
-                "tags": [
-                    "tikvs"
-                ],
-                "description": "create tikvs",
-                "operationId": "TikvController.CreateTikv",
-                "parameters": [
-                    {
-                        "in": "body",
-                        "name": "body",
-                        "description": "body for tikv content",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.Tikv"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {},
-                    "403": {
-                        "description": "body is empty"
-                    }
-                }
-            }
-        },
         "/tikvs/{cell}": {
             "get": {
                 "tags": [
@@ -517,30 +441,6 @@
                     },
                     "404": {
                         "description": ":key not found"
-                    }
-                }
-            },
-            "delete": {
-                "tags": [
-                    "tikvs"
-                ],
-                "description": "delete the tikv service",
-                "operationId": "TikvController.Delete",
-                "parameters": [
-                    {
-                        "in": "path",
-                        "name": "cell",
-                        "description": "The cell you want to delete",
-                        "required": true,
-                        "type": "string"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "{string} delete success!"
-                    },
-                    "403": {
-                        "description": "cell is empty"
                     }
                 }
             }
